ItEr46S20CUAsignacionGrupoRecursosAPlanificacionItEr32S12: Added tooltiptext and resolved alignment problems in advanced allocation window details

--- a/navalplanner-webapp/src/main/webapp/common/css/navalpro_zk.css
+++ b/navalplanner-webapp/src/main/webapp/common/css/navalpro_zk.css
@@ -1131,14 +1131,6 @@ tr.z-tree-row-seld, tr.z-list-item-seld,
     font-weight:bold;
 }
 
-.advancedassignmentdetails .hours {
-    min-width: 30px;
-}
-
-.function {
-    min-width: 90px;
-}
-
 .migas_linea .scheduling-state {
     -moz-border-radius-bottomleft: 6px;
     -moz-border-radius-bottomright: 1px;
